--- a/.settings/org.eclipse.php.debug.core.Debug_Process_Preferences.prefs
+++ b/.settings/org.eclipse.php.debug.core.Debug_Process_Preferences.prefs
@@ -1,2 +1,8 @@
+DefaultProjectBasePath=/wxcard
 eclipse.preferences.version=1
 org.eclipse.php.debug.core.use-project-settings=true
+org.eclipse.php.debug.coredefaultPHP=PHP 5.5.19 (CLI)
+org.eclipse.php.debug.coreenable_cli_debug=true
+org.eclipse.php.debug.coreoutput_encoding=UTF-8
+org.eclipse.php.debug.corestop_at_first_line_string=true
+org.eclipse.php.debug.coretransfer_encoding=UTF-8
